--- a/ninty_cats/app/views/cats/_form.html.erb
+++ b/ninty_cats/app/views/cats/_form.html.erb
@@ -1,14 +1,45 @@
-<form action="<%= new_cat_url%>" method="post">
-<label for= "name"> Name
-<input id="name" type="text" name="cat[name]" value=""<%= cat.name%>/>
-</label>
-<label for= "color"> Color
-</label>
 
-<label for= "sex"> Sex
-</label>
-<label for= "birth_date"> Birth Date
-</label>
-<label for= "description"> Description
-</label>
+
+<form action="<%= new_cat_url%>" method="post">
+
+<% if type == :edit %>
+      <input type="hidden" name="_method" value="PATCH" />
+<% end %>
+    
+
+<% if type == :edit %>
+            <label for= "name"> Name
+            <input id="name" type="text" name="cat[name]" value=""<%= cat.name%>/>
+            </label>
+            <br>
+            <label for= "color"> Color
+                <select name="color" id="color">
+                    <option value="Blank" disabled = "true" selected = "true">--select a color--</option>
+                    <option value="Black">Black</option>
+                    <option value="White">White</option>
+                    <option value="Orange">Orange</option>
+                    <option value="Tabby">Tabby</option>
+                    <option value="Tri-Color">Tri-Color</option>
+                </select>
+            </label>
+            <br>
+
+            <label for= "sex"> Sex
+                M<input id="sex" type="radio" name="cat[sex]" value="M" checked<%= cat.sex%>/>
+                F<input id="sex" type="radio" name="cat[sex]" value="F" <%= cat.sex%>/>
+            </label>
+            <br>
+
+            <label for= "birth_date"> Birth Date
+                    <input id="birth_date" type="date" name="cat[birth_date]" <%= cat.birth_date%>/>
+            </label>
+            <br>
+            <label for= "description"> Description
+                <textarea id="description" cols = "30" rows = "10" name="cat[description]"> <%= cat.description%>
+                </textarea>
+            </label>
+<% end %>
+
 </form>
+
+
